Address Sonar HTTP client findings